--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-google-maps/api": "^2.19.3",
     "@vis.gl/react-google-maps": "^1.2.0",
     "@prisma/client": "^5.20.0",
+    "axios": "^1.7.7",
+    "elevenlabs": "^0.16.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
