audio player ui

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 GOOGLE_MAPS_API_KEY=AIzaSyCvvlLvJ8yDgKup6hw6jPtHn3JGWJdS6sQ
+ELEVENLABS_API_KEY = sk_95c672f0ba5edcdbc2f1c7acad500f4953a6aaf7baf576fe
