--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "prisma:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.63",
     "@prisma/client": "^5.20.0",
     "@react-google-maps/api": "^2.19.3",
     "@vis.gl/react-google-maps": "^1.2.0",
+    "ai": "^3.4.7",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
